@@ -19,6 +19,6 @@ echo Starting mkpro with Web UI + Knowledge Scheduler
 echo   Web UI:    http://localhost:8080
 echo   Knowledge: http://localhost:8080/knowledge
 echo   DB Browser: http://localhost:8080/db
-java -Dmkpro.db.name=%~n0 -jar "%JAR_PATH%" --web --scheduler %*
+java -Dmkpro.db.name=%~n0 --add-modules jdk.incubator.vector -jar "%JAR_PATH%" --web --scheduler %*
 
 endlocal
